# sqlitemap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  build.bat  build.sh  index.html  readme.md  vcpkg.json
.github/workflows/: coverage.yml  macos.yml  ubuntu.yml  windows.yml
coverage-report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-report/sqlitemap/: index-sort-f.html  index-sort-l.html  index.html  sqlitemap.hpp.func-c.html  sqlitemap.hpp.func.html  sqlitemap.hpp.gcov.html
examples/: CMakeLists.txt  lines_to_sqlitemap.cpp  sqlitemap_cereal.cpp  sqlitemap_client.cpp  sqlitemap_json.cpp  sqlitemap_tiles.cpp  sqlitemap_zlib.cpp
include/bw/sqlitemap/: sqlitemap.hpp
test/: CMakeLists.txt  coverage.sh
test/catch2/unit_tests/: custom.hpp  sqlitemap_algorithms_tests.cpp  sqlitemap_codecs_tests.cpp  sqlitemap_core_tests.cpp  sqlitemap_helper_tests.cpp
tools/: install-vcpkg.py
